[gd_scene load_steps=10 format=3 uid="uid://ball5ccs73f6b"]

[ext_resource type="Script" uid="uid://bi2an5he00ciy" path="res://scenes/game.gd" id="1_lbhrr"]
[ext_resource type="Texture2D" uid="uid://bcl0b217vecvo" path="res://assets/kitchenpixelart.png" id="1_lnu2h"]
[ext_resource type="PackedScene" uid="uid://4dsx15dwmsvp" path="res://scenes/player.tscn" id="2_yqjtg"]
[ext_resource type="FontFile" uid="uid://bfb3540f8jmre" path="res://assets/ka1.ttf" id="4_lbhrr"]
[ext_resource type="AudioStream" uid="uid://boq3v54ucgbd1" path="res://assets/audio/pixel-bubbles-287284.mp3" id="5_iywne"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_yqjtg"]
texture = ExtResource("1_lnu2h")
modulate_color = Color(0.787759, 0.787759, 0.787759, 1)

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_yqjtg"]
distance = -549.0

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_lnu2h"]
normal = Vector2(1, 0)
distance = 1.0

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_lbhrr"]
normal = Vector2(-1, 0)
distance = -1023.0

[node name="Game" type="Node2D"]
script = ExtResource("1_lbhrr")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Panel" type="Panel" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(25.6264, 15.0455)
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxTexture_yqjtg")

[node name="Player" parent="." instance=ExtResource("2_yqjtg")]
position = Vector2(523, 557)

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
shape = SubResource("WorldBoundaryShape2D_yqjtg")

[node name="CollisionShape2D_left" type="CollisionShape2D" parent="StaticBody2D"]
shape = SubResource("WorldBoundaryShape2D_lnu2h")

[node name="CollisionShape2D_right" type="CollisionShape2D" parent="StaticBody2D"]
shape = SubResource("WorldBoundaryShape2D_lbhrr")

[node name="UI" type="CanvasLayer" parent="."]

[node name="ScoreLabel" type="Label" parent="UI"]
offset_right = 40.0
offset_bottom = 23.0
scale = Vector2(1.55664, 1.13038)
theme_override_fonts/font = ExtResource("4_lbhrr")

[node name="SpawnTimer" type="Timer" parent="."]

[node name="DifficultyTimer" type="Timer" parent="."]

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_iywne")
autoplay = true
